grammar/C-grammar.output
État 27 conflits: 1 décalage/réduction
État 455 conflits: 1 décalage/réduction


Grammaire

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | string
    4                   | '(' expression ')'
    5                   | generic_selection

    6 constant: I_CONSTANT
    7         | F_CONSTANT
    8         | ENUMERATION_CONSTANT

    9 enumeration_constant: IDENTIFIER

   10 string: STRING_LITERAL
   11       | FUNC_NAME

   12 generic_selection: GENERIC '(' assignment_expression ',' generic_assoc_list ')'

   13 generic_assoc_list: generic_association
   14                   | generic_assoc_list ',' generic_association

   15 generic_association: type_name ':' assignment_expression
   16                    | DEFAULT ':' assignment_expression

   17 postfix_expression: primary_expression
   18                   | postfix_expression '[' expression ']'
   19                   | postfix_expression '(' ')'
   20                   | postfix_expression '(' argument_expression_list ')'
   21                   | postfix_expression '.' IDENTIFIER
   22                   | postfix_expression PTR_OP IDENTIFIER
   23                   | postfix_expression INC_OP
   24                   | postfix_expression DEC_OP
   25                   | '(' type_name ')' '{' initializer_list '}'
   26                   | '(' type_name ')' '{' initializer_list ',' '}'

   27 argument_expression_list: assignment_expression
   28                         | argument_expression_list ',' assignment_expression

   29 unary_expression: postfix_expression
   30                 | INC_OP unary_expression
   31                 | DEC_OP unary_expression
   32                 | unary_operator cast_expression
   33                 | SIZEOF unary_expression
   34                 | SIZEOF '(' type_name ')'
   35                 | ALIGNOF '(' type_name ')'

   36 unary_operator: '&'
   37               | '*'
   38               | '+'
   39               | '-'
   40               | '~'
   41               | '!'

   42 cast_expression: unary_expression
   43                | '(' type_name ')' cast_expression

   44 multiplicative_expression: cast_expression
   45                          | multiplicative_expression '*' cast_expression
   46                          | multiplicative_expression '/' cast_expression
   47                          | multiplicative_expression '%' cast_expression

   48 additive_expression: multiplicative_expression
   49                    | additive_expression '+' multiplicative_expression
   50                    | additive_expression '-' multiplicative_expression

   51 shift_expression: additive_expression
   52                 | shift_expression LEFT_OP additive_expression
   53                 | shift_expression RIGHT_OP additive_expression

   54 relational_expression: shift_expression
   55                      | relational_expression '<' shift_expression
   56                      | relational_expression '>' shift_expression
   57                      | relational_expression LE_OP shift_expression
   58                      | relational_expression GE_OP shift_expression

   59 equality_expression: relational_expression
   60                    | equality_expression EQ_OP relational_expression
   61                    | equality_expression NE_OP relational_expression

   62 and_expression: equality_expression
   63               | and_expression '&' equality_expression

   64 exclusive_or_expression: and_expression
   65                        | exclusive_or_expression '^' and_expression

   66 inclusive_or_expression: exclusive_or_expression
   67                        | inclusive_or_expression '|' exclusive_or_expression

   68 logical_and_expression: inclusive_or_expression
   69                       | logical_and_expression AND_OP inclusive_or_expression

   70 logical_or_expression: logical_and_expression
   71                      | logical_or_expression OR_OP logical_and_expression

   72 conditional_expression: logical_or_expression
   73                       | logical_or_expression '?' expression ':' conditional_expression

   74 assignment_expression: conditional_expression
   75                      | unary_expression assignment_operator assignment_expression

   76 assignment_operator: '='
   77                    | MUL_ASSIGN
   78                    | DIV_ASSIGN
   79                    | MOD_ASSIGN
   80                    | ADD_ASSIGN
   81                    | SUB_ASSIGN
   82                    | LEFT_ASSIGN
   83                    | RIGHT_ASSIGN
   84                    | AND_ASSIGN
   85                    | XOR_ASSIGN
   86                    | OR_ASSIGN

   87 expression: assignment_expression
   88           | expression ',' assignment_expression

   89 constant_expression: conditional_expression

   90 declaration: declaration_specifiers ';'
   91            | declaration_specifiers init_declarator_list ';'
   92            | static_assert_declaration

   93 declaration_specifiers: storage_class_specifier declaration_specifiers
   94                       | storage_class_specifier
   95                       | type_specifier declaration_specifiers
   96                       | type_specifier
   97                       | type_qualifier declaration_specifiers
   98                       | type_qualifier
   99                       | function_specifier declaration_specifiers
  100                       | function_specifier
  101                       | alignment_specifier declaration_specifiers
  102                       | alignment_specifier

  103 init_declarator_list: init_declarator
  104                     | init_declarator_list ',' init_declarator

  105 init_declarator: declarator '=' initializer
  106                | declarator

  107 storage_class_specifier: TYPEDEF
  108                        | EXTERN
  109                        | STATIC
  110                        | THREAD_LOCAL
  111                        | AUTO
  112                        | REGISTER

  113 type_specifier: VOID
  114               | CHAR
  115               | SHORT
  116               | INT
  117               | LONG
  118               | FLOAT
  119               | DOUBLE
  120               | SIGNED
  121               | UNSIGNED
  122               | BOOL
  123               | COMPLEX
  124               | IMAGINARY
  125               | atomic_type_specifier
  126               | struct_or_union_specifier
  127               | enum_specifier
  128               | TYPEDEF_NAME

  129 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
  130                          | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  131                          | struct_or_union IDENTIFIER

  132 struct_or_union: STRUCT
  133                | UNION

  134 struct_declaration_list: struct_declaration
  135                        | struct_declaration_list struct_declaration

  136 struct_declaration: specifier_qualifier_list ';'
  137                   | specifier_qualifier_list struct_declarator_list ';'
  138                   | static_assert_declaration

  139 specifier_qualifier_list: type_specifier specifier_qualifier_list
  140                         | type_specifier
  141                         | type_qualifier specifier_qualifier_list
  142                         | type_qualifier

  143 struct_declarator_list: struct_declarator
  144                       | struct_declarator_list ',' struct_declarator

  145 struct_declarator: ':' constant_expression
  146                  | declarator ':' constant_expression
  147                  | declarator

  148 enum_specifier: ENUM '{' enumerator_list '}'
  149               | ENUM '{' enumerator_list ',' '}'
  150               | ENUM IDENTIFIER '{' enumerator_list '}'
  151               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  152               | ENUM IDENTIFIER

  153 enumerator_list: enumerator
  154                | enumerator_list ',' enumerator

  155 enumerator: enumeration_constant '=' constant_expression
  156           | enumeration_constant

  157 atomic_type_specifier: ATOMIC '(' type_name ')'

  158 type_qualifier: CONST
  159               | RESTRICT
  160               | VOLATILE
  161               | ATOMIC

  162 function_specifier: INLINE
  163                   | NORETURN

  164 alignment_specifier: ALIGNAS '(' type_name ')'
  165                    | ALIGNAS '(' constant_expression ')'

  166 declarator: pointer direct_declarator
  167           | direct_declarator

  168 direct_declarator: IDENTIFIER
  169                  | '(' declarator ')'
  170                  | direct_declarator '[' ']'
  171                  | direct_declarator '[' '*' ']'
  172                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  173                  | direct_declarator '[' STATIC assignment_expression ']'
  174                  | direct_declarator '[' type_qualifier_list '*' ']'
  175                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  176                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  177                  | direct_declarator '[' type_qualifier_list ']'
  178                  | direct_declarator '[' assignment_expression ']'
  179                  | direct_declarator '(' parameter_type_list ')'
  180                  | direct_declarator '(' ')'
  181                  | direct_declarator '(' identifier_list ')'

  182 pointer: '*' type_qualifier_list pointer
  183        | '*' type_qualifier_list
  184        | '*' pointer
  185        | '*'

  186 type_qualifier_list: type_qualifier
  187                    | type_qualifier_list type_qualifier

  188 parameter_type_list: parameter_list ',' ELLIPSIS
  189                    | parameter_list

  190 parameter_list: parameter_declaration
  191               | parameter_list ',' parameter_declaration

  192 parameter_declaration: declaration_specifiers declarator
  193                      | declaration_specifiers abstract_declarator
  194                      | declaration_specifiers

  195 identifier_list: IDENTIFIER
  196                | identifier_list ',' IDENTIFIER

  197 type_name: specifier_qualifier_list abstract_declarator
  198          | specifier_qualifier_list

  199 abstract_declarator: pointer direct_abstract_declarator
  200                    | pointer
  201                    | direct_abstract_declarator

  202 direct_abstract_declarator: '(' abstract_declarator ')'
  203                           | '[' ']'
  204                           | '[' '*' ']'
  205                           | '[' STATIC type_qualifier_list assignment_expression ']'
  206                           | '[' STATIC assignment_expression ']'
  207                           | '[' type_qualifier_list STATIC assignment_expression ']'
  208                           | '[' type_qualifier_list assignment_expression ']'
  209                           | '[' type_qualifier_list ']'
  210                           | '[' assignment_expression ']'
  211                           | direct_abstract_declarator '[' ']'
  212                           | direct_abstract_declarator '[' '*' ']'
  213                           | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  214                           | direct_abstract_declarator '[' STATIC assignment_expression ']'
  215                           | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
  216                           | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  217                           | direct_abstract_declarator '[' type_qualifier_list ']'
  218                           | direct_abstract_declarator '[' assignment_expression ']'
  219                           | '(' ')'
  220                           | '(' parameter_type_list ')'
  221                           | direct_abstract_declarator '(' ')'
  222                           | direct_abstract_declarator '(' parameter_type_list ')'

  223 initializer: '{' initializer_list '}'
  224            | '{' initializer_list ',' '}'
  225            | assignment_expression

  226 initializer_list: designation initializer
  227                 | initializer
  228                 | initializer_list ',' designation initializer
  229                 | initializer_list ',' initializer

  230 designation: designator_list '='

  231 designator_list: designator
  232                | designator_list designator

  233 designator: '[' constant_expression ']'
  234           | '.' IDENTIFIER

  235 static_assert_declaration: STATIC_ASSERT '(' constant_expression ',' STRING_LITERAL ')' ';'

  236 statement: labeled_statement
  237          | compound_statement
  238          | expression_statement
  239          | selection_statement
  240          | iteration_statement
  241          | jump_statement

  242 labeled_statement: IDENTIFIER ':' statement
  243                  | CASE constant_expression ':' statement
  244                  | DEFAULT ':' statement

  245 compound_statement: '{' '}'
  246                   | '{' block_item_list '}'

  247 block_item_list: block_item
  248                | block_item_list block_item

  249 block_item: declaration
  250           | statement

  251 expression_statement: ';'
  252                     | expression ';'

  253 selection_statement: IF '(' expression ')' statement ELSE statement
  254                    | IF '(' expression ')' statement
  255                    | SWITCH '(' expression ')' statement

  256 iteration_statement: WHILE '(' expression ')' statement
  257                    | DO statement WHILE '(' expression ')' ';'
  258                    | FOR '(' expression_statement expression_statement ')' statement
  259                    | FOR '(' expression_statement expression_statement expression ')' statement
  260                    | FOR '(' declaration expression_statement ')' statement
  261                    | FOR '(' declaration expression_statement expression ')' statement

  262 jump_statement: GOTO IDENTIFIER ';'
  263               | CONTINUE ';'
  264               | BREAK ';'
  265               | RETURN ';'
  266               | RETURN expression ';'

  267 translation_unit: external_declaration
  268                 | translation_unit external_declaration

  269 external_declaration: function_definition
  270                     | declaration

  271 function_definition: declaration_specifiers declarator declaration_list compound_statement
  272                    | declaration_specifiers declarator compound_statement

  273 declaration_list: declaration
  274                 | declaration_list declaration


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'!' (33) 41
'%' (37) 47
'&' (38) 36 63
'(' (40) 4 12 19 20 25 26 34 35 43 157 164 165 169 179 180 181 202
    219 220 221 222 235 253 254 255 256 257 258 259 260 261
')' (41) 4 12 19 20 25 26 34 35 43 157 164 165 169 179 180 181 202
    219 220 221 222 235 253 254 255 256 257 258 259 260 261
'*' (42) 37 45 171 174 182 183 184 185 204 212
'+' (43) 38 49
',' (44) 12 14 26 28 88 104 144 149 151 154 188 191 196 224 228 229
    235
'-' (45) 39 50
'.' (46) 21 234
'/' (47) 46
':' (58) 15 16 73 145 146 242 243 244
';' (59) 90 91 136 137 235 251 252 257 262 263 264 265 266
'<' (60) 55
'=' (61) 76 105 155 230
'>' (62) 56
'?' (63) 73
'[' (91) 18 170 171 172 173 174 175 176 177 178 203 204 205 206 207
    208 209 210 211 212 213 214 215 216 217 218 233
']' (93) 18 170 171 172 173 174 175 176 177 178 203 204 205 206 207
    208 209 210 211 212 213 214 215 216 217 218 233
'^' (94) 65
'{' (123) 25 26 129 130 148 149 150 151 223 224 245 246
'|' (124) 67
'}' (125) 25 26 129 130 148 149 150 151 223 224 245 246
'~' (126) 40
error (256)
IDENTIFIER (258) 1 9 21 22 130 131 150 151 152 168 195 196 234 242
    262
I_CONSTANT (259) 6
F_CONSTANT (260) 7
STRING_LITERAL (261) 10 235
FUNC_NAME (262) 11
SIZEOF (263) 33 34
PTR_OP (264) 22
INC_OP (265) 23 30
DEC_OP (266) 24 31
LEFT_OP (267) 52
RIGHT_OP (268) 53
LE_OP (269) 57
GE_OP (270) 58
EQ_OP (271) 60
NE_OP (272) 61
AND_OP (273) 69
OR_OP (274) 71
MUL_ASSIGN (275) 77
DIV_ASSIGN (276) 78
MOD_ASSIGN (277) 79
ADD_ASSIGN (278) 80
SUB_ASSIGN (279) 81
LEFT_ASSIGN (280) 82
RIGHT_ASSIGN (281) 83
AND_ASSIGN (282) 84
XOR_ASSIGN (283) 85
OR_ASSIGN (284) 86
TYPEDEF_NAME (285) 128
ENUMERATION_CONSTANT (286) 8
TYPEDEF (287) 107
EXTERN (288) 108
STATIC (289) 109 172 173 175 205 206 207 213 214 216
AUTO (290) 111
REGISTER (291) 112
INLINE (292) 162
CONST (293) 158
RESTRICT (294) 159
VOLATILE (295) 160
BOOL (296) 122
CHAR (297) 114
SHORT (298) 115
INT (299) 116
LONG (300) 117
SIGNED (301) 120
UNSIGNED (302) 121
FLOAT (303) 118
DOUBLE (304) 119
VOID (305) 113
COMPLEX (306) 123
IMAGINARY (307) 124
STRUCT (308) 132
UNION (309) 133
ENUM (310) 148 149 150 151 152
ELLIPSIS (311) 188
CASE (312) 243
DEFAULT (313) 16 244
IF (314) 253 254
ELSE (315) 253
SWITCH (316) 255
WHILE (317) 256 257
DO (318) 257
FOR (319) 258 259 260 261
GOTO (320) 262
CONTINUE (321) 263
BREAK (322) 264
RETURN (323) 265 266
ALIGNAS (324) 164 165
ALIGNOF (325) 35
ATOMIC (326) 157 161
GENERIC (327) 12
NORETURN (328) 163
STATIC_ASSERT (329) 235
THREAD_LOCAL (330) 110


Non-terminaux, suivis des règles où ils apparaissent

$accept (100)
    à gauche: 0
primary_expression (101)
    à gauche: 1 2 3 4 5, à droite: 17
constant (102)
    à gauche: 6 7 8, à droite: 2
enumeration_constant (103)
    à gauche: 9, à droite: 155 156
string (104)
    à gauche: 10 11, à droite: 3
generic_selection (105)
    à gauche: 12, à droite: 5
generic_assoc_list (106)
    à gauche: 13 14, à droite: 12 14
generic_association (107)
    à gauche: 15 16, à droite: 13 14
postfix_expression (108)
    à gauche: 17 18 19 20 21 22 23 24 25 26, à droite: 18 19 20 21
    22 23 24 29
argument_expression_list (109)
    à gauche: 27 28, à droite: 20 28
unary_expression (110)
    à gauche: 29 30 31 32 33 34 35, à droite: 30 31 33 42 75
unary_operator (111)
    à gauche: 36 37 38 39 40 41, à droite: 32
cast_expression (112)
    à gauche: 42 43, à droite: 32 43 44 45 46 47
multiplicative_expression (113)
    à gauche: 44 45 46 47, à droite: 45 46 47 48 49 50
additive_expression (114)
    à gauche: 48 49 50, à droite: 49 50 51 52 53
shift_expression (115)
    à gauche: 51 52 53, à droite: 52 53 54 55 56 57 58
relational_expression (116)
    à gauche: 54 55 56 57 58, à droite: 55 56 57 58 59 60 61
equality_expression (117)
    à gauche: 59 60 61, à droite: 60 61 62 63
and_expression (118)
    à gauche: 62 63, à droite: 63 64 65
exclusive_or_expression (119)
    à gauche: 64 65, à droite: 65 66 67
inclusive_or_expression (120)
    à gauche: 66 67, à droite: 67 68 69
logical_and_expression (121)
    à gauche: 68 69, à droite: 69 70 71
logical_or_expression (122)
    à gauche: 70 71, à droite: 71 72 73
conditional_expression (123)
    à gauche: 72 73, à droite: 73 74 89
assignment_expression (124)
    à gauche: 74 75, à droite: 12 15 16 27 28 75 87 88 172 173 175
    176 178 205 206 207 208 210 213 214 215 216 218 225
assignment_operator (125)
    à gauche: 76 77 78 79 80 81 82 83 84 85 86, à droite: 75
expression (126)
    à gauche: 87 88, à droite: 4 18 73 88 252 253 254 255 256 257
    259 261 266
constant_expression (127)
    à gauche: 89, à droite: 145 146 155 165 233 235 243
declaration (128)
    à gauche: 90 91 92, à droite: 249 260 261 270 273 274
declaration_specifiers (129)
    à gauche: 93 94 95 96 97 98 99 100 101 102, à droite: 90 91 93
    95 97 99 101 192 193 194 271 272
init_declarator_list (130)
    à gauche: 103 104, à droite: 91 104
init_declarator (131)
    à gauche: 105 106, à droite: 103 104
storage_class_specifier (132)
    à gauche: 107 108 109 110 111 112, à droite: 93 94
type_specifier (133)
    à gauche: 113 114 115 116 117 118 119 120 121 122 123 124 125
    126 127 128, à droite: 95 96 139 140
struct_or_union_specifier (134)
    à gauche: 129 130 131, à droite: 126
struct_or_union (135)
    à gauche: 132 133, à droite: 129 130 131
struct_declaration_list (136)
    à gauche: 134 135, à droite: 129 130 135
struct_declaration (137)
    à gauche: 136 137 138, à droite: 134 135
specifier_qualifier_list (138)
    à gauche: 139 140 141 142, à droite: 136 137 139 141 197 198
struct_declarator_list (139)
    à gauche: 143 144, à droite: 137 144
struct_declarator (140)
    à gauche: 145 146 147, à droite: 143 144
enum_specifier (141)
    à gauche: 148 149 150 151 152, à droite: 127
enumerator_list (142)
    à gauche: 153 154, à droite: 148 149 150 151 154
enumerator (143)
    à gauche: 155 156, à droite: 153 154
atomic_type_specifier (144)
    à gauche: 157, à droite: 125
type_qualifier (145)
    à gauche: 158 159 160 161, à droite: 97 98 141 142 186 187
function_specifier (146)
    à gauche: 162 163, à droite: 99 100
alignment_specifier (147)
    à gauche: 164 165, à droite: 101 102
declarator (148)
    à gauche: 166 167, à droite: 105 106 146 147 169 192 271 272
direct_declarator (149)
    à gauche: 168 169 170 171 172 173 174 175 176 177 178 179 180
    181, à droite: 166 167 170 171 172 173 174 175 176 177 178 179
    180 181
pointer (150)
    à gauche: 182 183 184 185, à droite: 166 182 184 199 200
type_qualifier_list (151)
    à gauche: 186 187, à droite: 172 174 175 176 177 182 183 187
    205 207 208 209 213 215 216 217
parameter_type_list (152)
    à gauche: 188 189, à droite: 179 220 222
parameter_list (153)
    à gauche: 190 191, à droite: 188 189 191
parameter_declaration (154)
    à gauche: 192 193 194, à droite: 190 191
identifier_list (155)
    à gauche: 195 196, à droite: 181 196
type_name (156)
    à gauche: 197 198, à droite: 15 25 26 34 35 43 157 164
abstract_declarator (157)
    à gauche: 199 200 201, à droite: 193 197 202
direct_abstract_declarator (158)
    à gauche: 202 203 204 205 206 207 208 209 210 211 212 213 214
    215 216 217 218 219 220 221 222, à droite: 199 201 211 212 213
    214 215 216 217 218 221 222
initializer (159)
    à gauche: 223 224 225, à droite: 105 226 227 228 229
initializer_list (160)
    à gauche: 226 227 228 229, à droite: 25 26 223 224 228 229
designation (161)
    à gauche: 230, à droite: 226 228
designator_list (162)
    à gauche: 231 232, à droite: 230 232
designator (163)
    à gauche: 233 234, à droite: 231 232
static_assert_declaration (164)
    à gauche: 235, à droite: 92 138
statement (165)
    à gauche: 236 237 238 239 240 241, à droite: 242 243 244 250
    253 254 255 256 257 258 259 260 261
labeled_statement (166)
    à gauche: 242 243 244, à droite: 236
compound_statement (167)
    à gauche: 245 246, à droite: 237 271 272
block_item_list (168)
    à gauche: 247 248, à droite: 246 248
block_item (169)
    à gauche: 249 250, à droite: 247 248
expression_statement (170)
    à gauche: 251 252, à droite: 238 258 259 260 261
selection_statement (171)
    à gauche: 253 254 255, à droite: 239
iteration_statement (172)
    à gauche: 256 257 258 259 260 261, à droite: 240
jump_statement (173)
    à gauche: 262 263 264 265 266, à droite: 241
translation_unit (174)
    à gauche: 267 268, à droite: 0 268
external_declaration (175)
    à gauche: 269 270, à droite: 267 268
function_definition (176)
    à gauche: 271 272, à droite: 269
declaration_list (177)
    à gauche: 273 274, à droite: 271 274


État 0

    0 $accept: . translation_unit $end

    TYPEDEF_NAME   décalage et aller à l'état 1
    TYPEDEF        décalage et aller à l'état 2
    EXTERN         décalage et aller à l'état 3
    STATIC         décalage et aller à l'état 4
    AUTO           décalage et aller à l'état 5
    REGISTER       décalage et aller à l'état 6
    INLINE         décalage et aller à l'état 7
    CONST          décalage et aller à l'état 8
    RESTRICT       décalage et aller à l'état 9
    VOLATILE       décalage et aller à l'état 10
    BOOL           décalage et aller à l'état 11
    CHAR           décalage et aller à l'état 12
    SHORT          décalage et aller à l'état 13
    INT            décalage et aller à l'état 14
    LONG           décalage et aller à l'état 15
    SIGNED         décalage et aller à l'état 16
    UNSIGNED       décalage et aller à l'état 17
    FLOAT          décalage et aller à l'état 18
    DOUBLE         décalage et aller à l'état 19
    VOID           décalage et aller à l'état 20
    COMPLEX        décalage et aller à l'état 21
    IMAGINARY      décalage et aller à l'état 22
    STRUCT         décalage et aller à l'état 23
    UNION          décalage et aller à l'état 24
    ENUM           décalage et aller à l'état 25
    ALIGNAS        décalage et aller à l'état 26
    ATOMIC         décalage et aller à l'état 27
    NORETURN       décalage et aller à l'état 28
    STATIC_ASSERT  décalage et aller à l'état 29
    THREAD_LOCAL   décalage et aller à l'état 30

    declaration                aller à l'état 31
    declaration_specifiers     aller à l'état 32
    storage_class_specifier    aller à l'état 33
    type_specifier             aller à l'état 34
    struct_or_union_specifier  aller à l'état 35
    struct_or_union            aller à l'état 36
    enum_specifier             aller à l'état 37
    atomic_type_specifier      aller à l'état 38
    type_qualifier             aller à l'état 39
    function_specifier         aller à l'état 40
    alignment_specifier        aller à l'état 41
    static_assert_declaration  aller à l'état 42
    translation_unit           aller à l'état 43
    external_declaration       aller à l'état 44
    function_definition        aller à l'état 45


État 1

  128 type_specifier: TYPEDEF_NAME .

    $défaut  réduction par utilisation de la règle 128 (type_specifier)


État 2

  107 storage_class_specifier: TYPEDEF .

    $défaut  réduction par utilisation de la règle 107 (storage_class_specifier)


État 3

  108 storage_class_specifier: EXTERN .

    $défaut  réduction par utilisation de la règle 108 (storage_class_specifier)


État 4

  109 storage_class_specifier: STATIC .

    $défaut  réduction par utilisation de la règle 109 (storage_class_specifier)


État 5

  111 storage_class_specifier: AUTO .

    $défaut  réduction par utilisation de la règle 111 (storage_class_specifier)


État 6

  112 storage_class_specifier: REGISTER .

    $défaut  réduction par utilisation de la règle 112 (storage_class_specifier)


État 7

  162 function_specifier: INLINE .

    $défaut  réduction par utilisation de la règle 162 (function_specifier)


État 8

  158 type_qualifier: CONST .

    $défaut  réduction par utilisation de la règle 158 (type_qualifier)


État 9

  159 type_qualifier: RESTRICT .

    $défaut  réduction par utilisation de la règle 159 (type_qualifier)


État 10

  160 type_qualifier: VOLATILE .

    $défaut  réduction par utilisation de la règle 160 (type_qualifier)


État 11

  122 type_specifier: BOOL .

    $défaut  réduction par utilisation de la règle 122 (type_specifier)


État 12

  114 type_specifier: CHAR .

    $défaut  réduction par utilisation de la règle 114 (type_specifier)


État 13

  115 type_specifier: SHORT .

    $défaut  réduction par utilisation de la règle 115 (type_specifier)


État 14

  116 type_specifier: INT .

    $défaut  réduction par utilisation de la règle 116 (type_specifier)


État 15

  117 type_specifier: LONG .

    $défaut  réduction par utilisation de la règle 117 (type_specifier)


État 16

  120 type_specifier: SIGNED .

    $défaut  réduction par utilisation de la règle 120 (type_specifier)


État 17

  121 type_specifier: UNSIGNED .

    $défaut  réduction par utilisation de la règle 121 (type_specifier)


État 18

  118 type_specifier: FLOAT .

    $défaut  réduction par utilisation de la règle 118 (type_specifier)


État 19

  119 type_specifier: DOUBLE .

    $défaut  réduction par utilisation de la règle 119 (type_specifier)


État 20

  113 type_specifier: VOID .

    $défaut  réduction par utilisation de la règle 113 (type_specifier)


État 21

  123 type_specifier: COMPLEX .

    $défaut  réduction par utilisation de la règle 123 (type_specifier)


État 22

  124 type_specifier: IMAGINARY .

    $défaut  réduction par utilisation de la règle 124 (type_specifier)


État 23

  132 struct_or_union: STRUCT .

    $défaut  réduction par utilisation de la règle 132 (struct_or_union)


État 24

  133 struct_or_union: UNION .

    $défaut  réduction par utilisation de la règle 133 (struct_or_union)


État 25

  148 enum_specifier: ENUM . '{' enumerator_list '}'
  149               | ENUM . '{' enumerator_list ',' '}'
  150               | ENUM . IDENTIFIER '{' enumerator_list '}'
  151               | ENUM . IDENTIFIER '{' enumerator_list ',' '}'
  152               | ENUM . IDENTIFIER

    IDENTIFIER  décalage et aller à l'état 46
    '{'         décalage et aller à l'état 47


État 26

  164 alignment_specifier: ALIGNAS . '(' type_name ')'
  165                    | ALIGNAS . '(' constant_expression ')'

    '('  décalage et aller à l'état 48


État 27

  157 atomic_type_specifier: ATOMIC . '(' type_name ')'
  161 type_qualifier: ATOMIC .

    '('  décalage et aller à l'état 49

    '('       [réduction par utilisation de la règle 161 (type_qualifier)]
    $défaut  réduction par utilisation de la règle 161 (type_qualifier)


État 28

  163 function_specifier: NORETURN .

    $défaut  réduction par utilisation de la règle 163 (function_specifier)


État 29

  235 static_assert_declaration: STATIC_ASSERT . '(' constant_expression ',' STRING_LITERAL ')' ';'

    '('  décalage et aller à l'état 50


État 30

  110 storage_class_specifier: THREAD_LOCAL .

    $défaut  réduction par utilisation de la règle 110 (storage_class_specifier)


État 31

  270 external_declaration: declaration .

    $défaut  réduction par utilisation de la règle 270 (external_declaration)


État 32

   90 declaration: declaration_specifiers . ';'
   91            | declaration_specifiers . init_declarator_list ';'
  271 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  272                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  décalage et aller à l'état 51
    '('         décalage et aller à l'état 52
    '*'         décalage et aller à l'état 53
    ';'         décalage et aller à l'état 54

    init_declarator_list  aller à l'état 55
    init_declarator       aller à l'état 56
    declarator            aller à l'état 57
    direct_declarator     aller à l'état 58
    pointer               aller à l'état 59


État 33

   93 declaration_specifiers: storage_class_specifier . declaration_specifiers
   94                       | storage_class_specifier .

    TYPEDEF_NAME  décalage et aller à l'état 1
    TYPEDEF       décalage et aller à l'état 2
    EXTERN        décalage et aller à l'état 3
    STATIC        décalage et aller à l'état 4
    AUTO          décalage et aller à l'état 5
    REGISTER      décalage et aller à l'état 6
    INLINE        décalage et aller à l'état 7
    CONST         décalage et aller à l'état 8
    RESTRICT      décalage et aller à l'état 9
    VOLATILE      décalage et aller à l'état 10
    BOOL          décalage et aller à l'état 11
    CHAR          décalage et aller à l'état 12
    SHORT         décalage et aller à l'état 13
    INT           décalage et aller à l'état 14
    LONG          décalage et aller à l'état 15
    SIGNED        décalage et aller à l'état 16
    UNSIGNED      décalage et aller à l'état 17
    FLOAT         décalage et aller à l'état 18
    DOUBLE        décalage et aller à l'état 19
    VOID          décalage et aller à l'état 20
    COMPLEX       décalage et aller à l'état 21
    IMAGINARY     décalage et aller à l'état 22
    STRUCT        décalage et aller à l'état 23
    UNION         décalage et aller à l'état 24
    ENUM          décalage et aller à l'état 25
    ALIGNAS       décalage et aller à l'état 26
    ATOMIC        décalage et aller à l'état 27
    NORETURN      décalage et aller à l'état 28
    THREAD_LOCAL  décalage et aller à l'état 30

    $défaut  réduction par utilisation de la règle 94 (declaration_specifiers)

    declaration_specifiers     aller à l'état 60
    storage_class_specifier    aller à l'état 33
    type_specifier             aller à l'état 34
    struct_or_union_specifier  aller à l'état 35
    struct_or_union            aller à l'état 36
    enum_specifier             aller à l'état 37
    atomic_type_specifier      aller à l'état 38
    type_qualifier             aller à l'état 39
    function_specifier         aller à l'état 40
    alignment_specifier        aller à l'état 41


État 34

   95 declaration_specifiers: type_specifier . declaration_specifiers
   96                       | type_specifier .

    TYPEDEF_NAME  décalage et aller à l'état 1
    TYPEDEF       décalage et aller à l'état 2
    EXTERN        décalage et aller à l'état 3
    STATIC        décalage et aller à l'état 4
    AUTO          décalage et aller à l'état 5
    REGISTER      décalage et aller à l'état 6
    INLINE        décalage et aller à l'état 7
    CONST         décalage et aller à l'état 8
    RESTRICT      décalage et aller à l'état 9
    VOLATILE      décalage et aller à l'état 10
    BOOL          décalage et aller à l'état 11
    CHAR          décalage et aller à l'état 12
    SHORT         décalage et aller à l'état 13
    INT           décalage et aller à l'état 14
    LONG          décalage et aller à l'état 15
    SIGNED        décalage et aller à l'état 16
    UNSIGNED      décalage et aller à l'état 17
    FLOAT         décalage et aller à l'état 18
    DOUBLE        décalage et aller à l'état 19
    VOID          décalage et aller à l'état 20
    COMPLEX       décalage et aller à l'état 21
    IMAGINARY     décalage et aller à l'état 22
    STRUCT        décalage et aller à l'état 23
    UNION         décalage et aller à l'état 24
    ENUM          décalage et aller à l'état 25
    ALIGNAS       décalage et aller à l'état 26
    ATOMIC        décalage et aller à l'état 27
    NORETURN      décalage et aller à l'état 28
    THREAD_LOCAL  décalage et aller à l'état 30

    $défaut  réduction par utilisation de la règle 96 (declaration_specifiers)

    declaration_specifiers     aller à l'état 61
    storage_class_specifier    aller à l'état 33
    type_specifier             aller à l'état 34
    struct_or_union_specifier  aller à l'état 35
    struct_or_union            aller à l'état 36
    enum_specifier             aller à l'état 37
    atomic_type_specifier      aller à l'état 38
    type_qualifier             aller à l'état 39
    function_specifier         aller à l'état 40
    alignment_specifier        aller à l'état 41


État 35

  126 type_specifier: struct_or_union_specifier .

    $défaut  réduction par utilisation de la règle 126 (type_specifier)


État 36

  129 struct_or_union_specifier: struct_or_union . '{' struct_declaration_list '}'
  130                          | struct_or_union . IDENTIFIER '{' struct_declaration_list '}'
  131                          | struct_or_union . IDENTIFIER

    IDENTIFIER  décalage et aller à l'état 62
    '{'         décalage et aller à l'état 63


État 37

  127 type_specifier: enum_specifier .

    $défaut  réduction par utilisation de la règle 127 (type_specifier)


État 38

  125 type_specifier: atomic_type_specifier .

    $défaut  réduction par utilisation de la règle 125 (type_specifier)


État 39

   97 declaration_specifiers: type_qualifier . declaration_specifiers
   98                       | type_qualifier .
